// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppNotification /> > Default story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > InverseVariant story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-inverse_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > InverseWithDismissAndControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-inverse_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="_button_0829c1 _button--context-default_0829c1 _button--layout-icon-only_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-neutral_0829c1 _app-notification__close-btn_d1763b"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> > WithControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > WithDismissAndControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Limited subTitle text
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="_button_0829c1 _button--context-default_0829c1 _button--layout-icon-only_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 _app-notification__close-btn_d1763b"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> > WithLinkInSubtitle story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Some text with a
           
          <a
            class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--variant-inverse_d78ce8"
            href="https://example.com/"
          >
            link
          </a>
           
          in.
        </span>
      </span>
    </section>
  </div>
</div>
`;
